se actualiza metodo deprecado